fixed broken links

--- a/docs/cloud/guides/enable-slack-alerts.mdx
+++ b/docs/cloud/guides/enable-slack-alerts.mdx
@@ -2,6 +2,8 @@
 title: "Enable Slack alerts"
 ---
 
+## About Slack alerts
+
 <Snippet file="alerts/alerts-introduction.mdx" />
 
 ## Setup Slack Integration
