--- a/docs/data-tests/schema-tests/json-schema.mdx
+++ b/docs/data-tests/schema-tests/json-schema.mdx
@@ -7,9 +7,9 @@ title: "JSON schema"
 Allows validating that a string column matches a given JSON schema. The test expects a JSON schema as input,
 defined according to the [JSON schema standard](https://json-schema.org/), defined in YAML format (see an example below).
 
-This test along with the relevant JSON schema can be [auto-generated](/guides/add-schema-tests#auto-generate-schema-tests).
+This test along with the relevant JSON schema can be auto-generated (see details below).
 
-_Note: This test relies on our [Python tests capability](/guides/python-tests), and is currently only supported for
+_Note: This test relies on our [Python tests capability](/data-tests/python-tests), and is currently only supported for
 Snowflake and BigQuery data warehouses._
 
 ### Auto-generate JSON schema tests
