--- a/docs/data-tests/schema-tests/schema-changes-from-baseline.mdx
+++ b/docs/data-tests/schema-tests/schema-changes-from-baseline.mdx
@@ -7,7 +7,7 @@ title: "Schema changes from baseline"
 Checks for schema changes against baseline columns defined in a source's or model's configuration.
 For this test to work, the configuration should contain columns and data types.
 
-The initial configuration needed for this test can be [auto-generated](/guides/add-schema-tests#auto-generate-schema-tests) (see details below).
+The initial configuration needed for this test can be auto-generated (see details below).
 
 Supported parameters for the test:
 
