--- a/docs/features/ci.mdx
+++ b/docs/features/ci.mdx
@@ -1,6 +1,7 @@
 ---
 title: "Elementary CI"
 sidebarTitle: "Elementary CI"
+icon: "code-pull-request"
 ---
 
 ### Closed beta - Elementary Pull request impact analysis!
