--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -31,11 +31,11 @@ Start by deploying the dbt package, and then setup Elementary Cloud **or** Eleme
 
 ## How it works?
 
-In your dbt project, you install the [Elementary dbt package](/quickstart#install-the-dbt-package).
+In your dbt project, you install the [Elementary dbt package](/guides/modules-overview/dbt-package).
 The package will collect metadata and run results to a dedicated Elementary schema.
 You can use elementary tests in your dbt project, configured just like native dbt tests.
 
-[Elementary Cloud](/cloud/introduction) or [Elementary CLI](/understand-elementary/cli-install#install-and-configure) will connect to your data warehouse, read from the Elementary schema, and present the results in the UI / alerts.
+[Elementary Cloud](/cloud/introduction) or [Elementary CLI](/oss/oss-introduction) will connect to your data warehouse, read from the Elementary schema, and present the results in the UI / alerts.
 
 ## Community & Support
 
