--- a/docs/oss/guides/share-observability-report/send-report-summary.mdx
+++ b/docs/oss/guides/share-observability-report/send-report-summary.mdx
@@ -16,7 +16,7 @@ This is useful for you and your team members to understand quickly if there is s
 
 ### Enabling report summary for hosted report
 
-After you [set up a Slack app and token](/integrations/slack#slack-integration-setup) you can run the following command:
+After you [set up a Slack app and token](/oss/deployment-and-configuration/slack#slack-integration-setup) you can run the following command:
 
 AWS S3:
 
