--- a/docs/oss/guides/share-observability-report/share-via-slack.mdx
+++ b/docs/oss/guides/share-observability-report/share-via-slack.mdx
@@ -5,11 +5,11 @@ sidebarTitle: "Share via Slack"
 
 You can share the report via Slack as html attachment.
 
-By default, sharing the Slack message will include a [report summary](/guides/share-observability-report/send-report-summary).
+By default, sharing the Slack message will include a [report summary](/oss/guides/share-observability-report/send-report-summary).
 
 #### CLI `send-report` command
 
-After you [set up a Slack app and token](/integrations/slack#slack-integration-setup), run the command:
+After you [set up a Slack app and token](/oss/deployment-and-configuration/slack#slack-integration-setup), run the command:
 
 ```shell
 edr send-report --slack-token <SLACK_TOKEN> --slack-channel-name <CHANNEL_NAME>
