--- a/docs/x_old/understand-elementary/elementary-report-ui.mdx
+++ b/docs/x_old/understand-elementary/elementary-report-ui.mdx
@@ -28,7 +28,7 @@ generate the UI as an HTML file.
 ### Test Results
 
 The `Test results` tab shows the latest result for each dbt or Elementary test that was executed in the last 7 days (Can
-be changed by passing `--days-back` param to the [CLI](/understand-elementary/cli-commands)).
+be changed by passing `--days-back` param to the [CLI](/oss/cli-commands)).
 
 Initially, the report presents all tests, sorted by status (failures on top) and last run time. The grey header on the
 top of the screen shows the total amount of results of each status.
@@ -59,8 +59,8 @@ The rows are expandable, and on expansion show information that can help underst
 ## Test runs
 
 The `Test runs` tab shows the last 30 runs (can be changed by passing `--executions-limit` param to
-the [CLI](/understand-elementary/cli-commands#cli-advanced-options)) for each dbt or Elementary test that was executed in the last 7 days (
-can be changed by passing `--days-back` param to the [CLI](/understand-elementary/cli-commands#cli-advanced-options)).
+the [CLI](/oss/cli-commands#cli-advanced-options)) for each dbt or Elementary test that was executed in the last 7 days (
+can be changed by passing `--days-back` param to the [CLI](/oss/cli-commands#cli-advanced-options)).
 
 Initially, the report presents all tests, sorted by results (results containing failures on top), fail rate and last run
 time. The grey header on the top of the screen shows the total amount of runs for each status.
