--- a/docs/_snippets/alerts/alerts-introduction.mdx
+++ b/docs/_snippets/alerts/alerts-introduction.mdx
@@ -6,10 +6,10 @@ Elementary has a Slack integration to send alerts about:
 - Source freshness issues
 
 You can enrich your alerts by adding properties to tests and models in your `.yml` files.
-The supported attributes are: [owner](/guides/alerts-configuration#owner), [subscribers](/guides/alerts-configuration#subscribers), [description](/guides/alerts-configuration#test-description), [tags](/guides/alerts-configuration#tags).
+The supported attributes are: owner, subscribers, description, tags.
 
 You can configure and customize your alerts by configuring:
-[custom channel](/guides/alerts-configuration#custom-channel), [suppression interval](/guides/alerts-configuration#suppression_interval), [alert fields](/guides/alerts-configuration#alert_fields)(for test alerts only), [alert grouping](/guides/alerts-configuration#group-alerts-by-table), [alert filters](/guides/alerts-configuration#filter-alerts).
+custom channel, suppression interval, alert fields (for test alerts only), alert grouping, alert filters.
 
 <Frame>
   <div className="dark:bg-white rounded-md p-4">
