--- a/docs/dbt/dbt-artifacts.mdx
+++ b/docs/dbt/dbt-artifacts.mdx
@@ -21,6 +21,8 @@ Some artifacts are updated by an [on-run-end](https://docs.getdbt.com/reference/
 - **`dbt run` that includes elementary models:**
   - `dbt_models`, `dbt_tests`, `dbt_sources`, `dbt_exposures`, `dbt_metrics` - Metadata and configuration. It is recommended to run these models when you make changes in your projects.
 
+<Tip>Read more about [Elementary on-run-end hooks](/dbt/on-run-end_hooks)</Tip>
+
 ## Which artifacts are uploaded and modeled?
 
 Elementary uploads fields from the run-results, and the graph object (includes data of manifest, catalog and sources).
