--- a/docs/features/automated-monitors.mdx
+++ b/docs/features/automated-monitors.mdx
@@ -1,5 +1,9 @@
 ---
 title: Automated Monitors
+icon: "wand-magic-sparkles"
 ---
+<Snippet file="cloud/cloud-feature-tag.mdx" />
 
 Under construction 🚧
+
+
