--- a/docs/features/data-tests.mdx
+++ b/docs/features/data-tests.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Elementary Data Tests"
+icon: "monitor-waveform"
 ---
 
 Elementary provides tests for detection of data quality issues.
@@ -10,3 +11,4 @@ Elementary tests can be used in addition to dbt tests, packages tests (such as d
 All of these test results will be presented in the Elementary UI and alerts.
 
 <Snippet file="data-tests/tests-cards.mdx" />
+
