--- a/docs/oss/cli-install.mdx
+++ b/docs/oss/cli-install.mdx
@@ -30,7 +30,7 @@ Elementary CLI requires a connection profile to connect to DWH. Additional confi
 - **Required:** `HOME_DIR/.dbt/profiles.yml` - Connection details to the data warehouse, in the format of dbt connection profile named `elementary`.
 - **Optional:** `HOME_DIR/.edr/config.yml` - Elementary configuration.
 
-(These default paths and names may be changed using the [CLI options](/understand-elementary/cli-commands#cli-advanced-options)).
+(These default paths and names may be changed using the [CLI options](/oss/cli-commands#cli-advanced-options)).
 
 <Accordion title="How to create 'profiles.yml'?">
   <Snippet file="add-connection-profile.mdx" />
