--- a/docs/oss/deployment-and-configuration/slack.mdx
+++ b/docs/oss/deployment-and-configuration/slack.mdx
@@ -1,8 +1,9 @@
 ---
-title: "Slack"
+title: "Slack setup for Elementary CLI"
+sidebarTitle: "Slack"
 ---
 
-Elementary Slack integration includes sending [Slack alerts](/quickstart/send-slack-alerts) on failures in dbt tests and models, and the option to distribute the [data observability report](/quickstart/generate-report-ui) as a message attachment.
+Elementary Slack integration includes sending [Slack alerts](/oss/guides/send-slack-alerts) on failures in dbt tests and models, and the option to distribute the [data observability report](/oss/guides/generate-report-ui) as a message attachment.
 
 ## Token vs Webhook
 
