--- a/docs/oss/quickstart/quickstart-cli-package.mdx
+++ b/docs/oss/quickstart/quickstart-cli-package.mdx
@@ -12,6 +12,6 @@ Take a moment to ⭐️ [star our Github repo!](https://github.com/elementary-da
 
 Then -
 
-1. [Install the Elementary CLI](/quickstart-cli) 🤩
-2. [Add data anomaly detection dbt tests](/guides/add-elementary-tests) 📈
-3. [Deploy Elementary in production](/deployment-and-configuration/elementary-in-production) 🚀
+1. [Install the Elementary CLI](/oss/quickstart/quickstart-cli) 🤩
+2. [Add data anomaly detection dbt tests](/data-tests/add-elementary-tests) 📈
+3. [Deploy Elementary in production](/oss/deployment-and-configuration/elementary-in-production) 🚀
