--- a/docs/_snippets/cloud/introduction.mdx
+++ b/docs/_snippets/cloud/introduction.mdx
@@ -5,21 +5,24 @@
     Elementary configuration is managed in your dbt code. 
     Elementary Cloud syncs configuration changes from the UI back to the dbt project code repository.
 
-    You won't need to duplicate configuration - all your existing tests, owners, tags, and descriptions are leveraged. 
+    You won't need to duplicate configuration - all your existing tests, owners, tags, and descriptions are leveraged.
+
   </Accordion>
 
   <Accordion title="Secure by design" icon="lock" iconType="solid">
-    Elementary Cloud can't access your data. 
+    Elementary Cloud can't access your data.
 
     The dbt package creates a schema for logs, results and metadata, and Elementary only requires access to the Elementary schema.
 
-    [Read about Security and Privacy >>>](/cloud/general/security-and-privacy) 
+    [Read about Security and Privacy >>>](/cloud/general/security-and-privacy)
+
   </Accordion>
 
   <Accordion title="dbt native" icon="cube">
-    Elementary dbt package automatically collects results and artifacts from your dbt project. All of your Elementary configuration is managed in your dbt code.  
+    Elementary dbt package automatically collects results and artifacts from your dbt project. All of your Elementary configuration is managed in your dbt code.
 
     By combining the package and Elementary Cloud, you get full dbt observability. All your tests and results in one dashboard and interface.
+
   </Accordion>
 
   <Accordion title="Cloud only features and integrations" icon="stars" iconType="solid">
@@ -49,7 +52,6 @@ The Elementary cloud service requires access only to this schema, to connect and
 ### Want to learn more?
 
 <Card
-title="Schedule a demo call"
-href="https://savvycal.com/MaayanSa/c86d4771"
->
-</Card>
+  title="Schedule a demo call"
+  href="https://savvycal.com/MaayanSa/c86d4771"
+></Card>
