--- a/docs/_snippets/guides/alerts-code-configuration.mdx
+++ b/docs/_snippets/guides/alerts-code-configuration.mdx
@@ -433,8 +433,9 @@ tests:
 You can choose to enable / disable alert types by adding a var to your `dbt_project.yml`.
 
 <Warning>
-  Vars will be deprecated soon! For OSS users, we recommend filtering the alerts using [CLI
-  selectors](/oss/guides/alerts-configuration#alerts-cli-flags) instead.
+  Vars will be deprecated soon! For OSS users, we recommend filtering the alerts
+  using [CLI selectors](/oss/guides/alerts-configuration#alerts-cli-flags)
+  instead.
 </Warning>
 
 Below are the available vars and their default config:
