--- a/docs/_snippets/products-cards.mdx
+++ b/docs/_snippets/products-cards.mdx
@@ -6,20 +6,17 @@ Read about the key features and product offerings:
     icon="stars"
     iconType="solid"
     href="../../key-features"
-  >
-  </Card>
+  ></Card>
   <Card
     title="Elementary Cloud"
     icon="cloud"
     iconType="solid"
     href="/overview/elementary-cloud"
-  >
-  </Card>
+  ></Card>
   <Card
     title="Elementary OSS"
     icon="square-terminal"
     iconType="solid"
     href="/overview/elementary-oss"
-  >
-  </Card>
+  ></Card>
 </CardGroup>
