--- a/docs/data-tests/add-elementary-tests.mdx
+++ b/docs/data-tests/add-elementary-tests.mdx
@@ -58,8 +58,8 @@ The tests are configured and executed like any other tests in your project.
 <Card href="/data-tests/anomaly-detection-tests/all-columns-anomalies">
   ``` elementary.all_columns_anomalies ``` Executes column level monitors and
   anomaly detection on all the columns of the table. Specific monitors are
-  [detailed here](/data-tests/anomaly-detection-configuration/column-anomalies). You
-  can use `column_anomalies` param to override the default monitors, and
+  [detailed here](/data-tests/anomaly-detection-configuration/column-anomalies).
+  You can use `column_anomalies` param to override the default monitors, and
   `exclude_prefix` / `exclude_regexp` to exclude columns from the test.
 </Card>
 
