--- a/docs/guides/modules-overview/dbt-package.mdx
+++ b/docs/guides/modules-overview/dbt-package.mdx
@@ -27,12 +27,9 @@ The repository and source code of the Elementary dbt package can be [found here]
 After you deploy the dbt package, you can use Elementary tests, and your dbt artifacts will be uploaded automatically with on-run-end hooks:
 
 <CardGroup cols={3}>
-  <Card title="Elementary data tests" href="/features/data-tests">
-  </Card>
-  <Card title="dbt artifacts" href="/dbt/dbt-artifacts">
-  </Card>
-  <Card title="on-run-end hooks" href="/dbt/on-run-end_hooks">
-  </Card>
+  <Card title="Elementary data tests" href="/features/data-tests"></Card>
+  <Card title="dbt artifacts" href="/dbt/dbt-artifacts"></Card>
+  <Card title="on-run-end hooks" href="/dbt/on-run-end_hooks"></Card>
 </CardGroup>
 
 Although you can use the package only, we recommend using it with Elementary Cloud or OSS.
@@ -56,4 +53,3 @@ the following var:
 vars:
   elementary_full_refresh: true
 ```
-
