--- a/docs/overview/elementary-oss.mdx
+++ b/docs/overview/elementary-oss.mdx
@@ -3,6 +3,7 @@ title: "Elementary OSS"
 sidebarTitle: "Elementary OSS"
 icon: "square-terminal"
 ---
+
 <Snippet file="oss/oss-introduction-opening.mdx" />
 
 <CardGroup cols={2}>
@@ -12,10 +13,7 @@ icon: "square-terminal"
   >
     Install and configure the Elementary dbt package and CLI tool.
   </Card>
-  <Card
-    title="Elementary OSS documentation"
-    href="/oss/oss-introduction"
-  >
+  <Card title="Elementary OSS documentation" href="/oss/oss-introduction">
     Read more about Elementary OSS usage, guides and deployment.
   </Card>
 </CardGroup>
