--- a/docs/_snippets/oss/oss-introduction.mdx
+++ b/docs/_snippets/oss/oss-introduction.mdx
@@ -1,17 +1,32 @@
 ### CLI Guides
 
 <CardGroup cols={2}>
-  <Card title="Generate a report" icon="browsers" iconType="solid" href="/oss/guides/send-slack-alerts">
-  </Card>
-  <Card title="Send Slack alerts" icon="slack" href="/oss/guides/send-slack-alerts">
-  </Card>
-  <Card title="Share the report" icon="share-all" iconType="solid" href="/oss/guides/share-report-ui">
-  </Card>
-  <Card title="Deploy in production" icon="gear" iconType="solid" href="/oss/deployment-and-configuration/elementary-in-production">
-  </Card>
+  <Card
+    title="Generate a report"
+    icon="browsers"
+    iconType="solid"
+    href="/oss/guides/send-slack-alerts"
+  ></Card>
+  <Card
+    title="Send Slack alerts"
+    icon="slack"
+    href="/oss/guides/send-slack-alerts"
+  ></Card>
+  <Card
+    title="Share the report"
+    icon="share-all"
+    iconType="solid"
+    href="/oss/guides/share-report-ui"
+  ></Card>
+  <Card
+    title="Deploy in production"
+    icon="gear"
+    iconType="solid"
+    href="/oss/deployment-and-configuration/elementary-in-production"
+  ></Card>
 </CardGroup>
 
-<br/>
+<br />
 
 <Frame>
   <img
