--- a/docs/cloud/guides/enable-slack-alerts.mdx
+++ b/docs/cloud/guides/enable-slack-alerts.mdx
@@ -8,34 +8,33 @@ title: "Enable Slack alerts"
 
 ## Setup Slack Integration
 
-
 <Steps>
   <Step title="Slack App">
     First create a Slack app:
 
     <Accordion title="Create a Slack App">
-    
+
     ## 1. Create a Slack app
-    
+
     Go to the [Slack page to create apps](https://api.slack.com/apps?new_app=1) and create a new app (from scratch).
     Call it "[Elementary](#slack-app-display)" and connect it to the workspace of your choice.
-    
+
     <img
       src="https://res.cloudinary.com/mintlify/image/upload/v1659304879/elementary/slack-app_zpn7jc.png"
       alt="Slack app"
     />
-    
+
     ## 2. Optional - Slack app display
-    
+
     To change the display of the Elementary slack app, scroll down on the Slack app basic information page to the 'Display Information' section:
-    
+
     <img
       src="https://res.cloudinary.com/diuctyblm/image/upload/v1690367739/slack_app_customize_movkxg.png"
       alt="Slack display"
     />
-    
+
     Here is the Elementary icon for your use (click to download):
-    
+
     <a
       href="https://res.cloudinary.com/diuctyblm/image/upload/v1690367713/elementary_alert_dzibc7.png"
       download
@@ -46,7 +45,7 @@ title: "Enable Slack alerts"
         width="200"
       />
     </a>
-    
+
     </Accordion>
 
   </Step>
@@ -84,6 +83,6 @@ At the "OAuth & Permissions" page, press on "Install to Workspace" in order to g
 </Accordion>
   </Step>
   <Step title="Connect Slack">
-    On the environment cinfiguration in Elementary Cloud, add the Slack token and configure a default channel. 
+    On the environment configuration in Elementary Cloud, add the Slack token and configure a default channel. 
   </Step>
 </Steps>
