--- a/docs/key-features.mdx
+++ b/docs/key-features.mdx
@@ -4,9 +4,13 @@ sidebarTitle: "Key Features"
 icon: "stars"
 ---
 
-
 <CardGroup cols={1}>
-  <Card title="Data anomaly detection" icon="monitor-waveform" iconType="solid" href="/features/data-tests">
+  <Card
+    title="Data anomaly detection"
+    icon="monitor-waveform"
+    iconType="solid"
+    href="/features/data-tests"
+  >
     Monitor data quality metrics, freshness, volume and schema changes.
   </Card>
   <Card
@@ -17,30 +21,52 @@ icon: "stars"
   >
     Upload metadata, run and test results to tables as part of your jobs.
   </Card>
-  <Card title="Slack alerts" icon="slack" iconType="regular" href="/features/elementary-alerts">
+  <Card
+    title="Slack alerts"
+    icon="slack"
+    iconType="regular"
+    href="/features/elementary-alerts"
+  >
     Send informative alerts to different channels and users.
   </Card>
-  <Card title="Data observability dashboard" icon="browsers" iconType="solid" href="/features/data-observability-dashboard">
+  <Card
+    title="Data observability dashboard"
+    icon="browsers"
+    iconType="solid"
+    href="/features/data-observability-dashboard"
+  >
     Inspect your data health overview, test results, models performance and data
     lineage.
   </Card>
   <Card
-    title="End-to-end data lineage" icon="arrow-progress" iconType="solid" href="/features/lineage">
-    Inspect dependencies including Column Level Lineage and integration with BI tools.
+    title="End-to-end data lineage"
+    icon="arrow-progress"
+    iconType="solid"
+    href="/features/lineage"
+  >
+    Inspect dependencies including Column Level Lineage and integration with BI
+    tools.
   </Card>
   <Card
-    title="Automated monitors" href="/features/automated-monitors"
-    icon="wand-magic-sparkles" iconType="solid">
+    title="Automated monitors"
+    href="/features/automated-monitors"
+    icon="wand-magic-sparkles"
+    iconType="solid"
+  >
     Out of the box freshness, volume and schema monitoring.
   </Card>
   <Card
-    title="Configuration as code" href="/features/config-as-code"
-    icon="code" iconType="solid">
+    title="Configuration as code"
+    href="/features/config-as-code"
+    icon="code"
+    iconType="solid"
+  >
     All the Elementary configuration is managed in your dbt code.
   </Card>
   <Card
     title="Data Catalog"
-    icon="folder-tree" iconType="solid"
+    icon="folder-tree"
+    iconType="solid"
     href="/features/catalog"
   >
     Explore and discover data sets, manage your documentation in code.
