--- a/docs/overview/elementary-cloud.mdx
+++ b/docs/overview/elementary-cloud.mdx
@@ -3,6 +3,7 @@ title: "Elementary Cloud"
 sidebarTitle: "Elementary Cloud"
 icon: "cloud"
 ---
+
 <Snippet file="cloud/introduction-opening.mdx" />
 
 <CardGroup cols={2}>
@@ -12,13 +13,9 @@ icon: "cloud"
   >
     Start 30 days free trial, no credit card is required.
   </Card>
-  <Card
-    title="Elementary Cloud documentation"
-    href="/cloud/introduction"
-  >
+  <Card title="Elementary Cloud documentation" href="/cloud/introduction">
     Read more about Elementary Cloud usage, guides and integrations.
   </Card>
 </CardGroup>
 
 <Snippet file="cloud/introduction.mdx" />
-
