--- a/docs/_snippets/cloud/introduction.mdx
+++ b/docs/_snippets/cloud/introduction.mdx
@@ -30,6 +30,7 @@
     - Automated volume, freshness and schema monitoring
     - Column level lineage
     - Automated lineage to BI tools dashboards
+    - Multiple environments
     - Test management
     - Data catalog
     - Webhook triggered syncs
