--- a/docs/features/ci.mdx
+++ b/docs/features/ci.mdx
@@ -4,6 +4,8 @@ sidebarTitle: "Elementary CI"
 icon: "code-pull-request"
 ---
 
+<Snippet file="cloud/cloud-feature-tag.mdx" />
+
 ### Closed beta - Elementary Pull request impact analysis!
 
 When making changes to your data project, it can sometimes be hard to fully understand the impact of your changes and be certain that there are no unintended consequences.
