--- a/docs/features/multi-env.mdx
+++ b/docs/features/multi-env.mdx
@@ -3,4 +3,6 @@ title: "Multiple Environments"
 icon: "rectangle-history-circle-plus"
 ---
 
+<Snippet file="cloud/cloud-feature-tag.mdx" />
+
 Under construction 🚧
