validate report selector only when attachment is sent

--- a/docs/guides/share-observability-report/send-report-summary.mdx
+++ b/docs/guides/share-observability-report/send-report-summary.mdx
@@ -36,6 +36,12 @@ A link to the hosted report is included in the summary, which can be accessed ba
 
 #### Filter results summary
 
+<Warning>
+  The report itself cannot be filtered by tag, owner or model! To use those
+  filters for the summary you need to disable the report attachment by adding
+  `--disable html_attachment` to your command.
+</Warning>
+
 You can filter your results summary by a specific tag, owner or model.
 
 To filter by tag:
