--- a/docs/data-tests/anomaly-detection-configuration/anomaly-params.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/anomaly-params.mdx
@@ -16,7 +16,6 @@ sidebarTitle: "All configuration params"
    -- <a href="/data-tests/anomaly-detection-configuration/anomaly-sensitivity"><font color="#CD7D55">anomaly_sensitivity: int</font></a>
    -- <a href="/data-tests/anomaly-detection-configuration/min-training-set-size"><font color="#CD7D55">min_training_set_size: int</font></a>
    -- <a href="/data-tests/anomaly-detection-configuration/anomaly-direction"><font color="#CD7D55">anomaly_direction: [both | spike | drop]</font></a>
-   -- <a href="/data-tests/anomaly-detection-configuration/fail_on_zero"><font color="#CD7D55">fail_on_zero: [true | false]</font></a>
    -- <a href="/data-tests/anomaly-detection-configuration/ignore_small_changes"><font color="#CD7D55">ignore_small_changes:</font></a>
         &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/ignore_small_changes"><font color="#CD7D55">spike_failure_percent_threshold: int</font></a>
         &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/ignore_small_changes"><font color="#CD7D55">drop_failure_percent_threshold: int</font></a>
@@ -31,6 +30,9 @@ sidebarTitle: "All configuration params"
    -- <a href="/data-tests/anomaly-detection-configuration/detection-delay"><font color="#CD7D55">detection_delay:</font></a>
         &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/detection-delay"><font color="#CD7D55">period: [hour | day | week | month]</font></a>
         &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/detection-delay"><font color="#CD7D55">count: int</font></a>
+
+  volume_anomalies test:
+   -- <a href="/data-tests/anomaly-detection-configuration/fail_on_zero"><font color="#CD7D55">fail_on_zero: [true | false]</font></a>
 
   all_columns_anomalies test:
    -- <a href="/data-tests/anomaly-detection-configuration/column-anomalies"><font color="#CD7D55">column_anomalies: column monitors list</font></a>
