document columns and disabling columns autoupload

--- a/docs/dbt/dbt-artifacts.mdx
+++ b/docs/dbt/dbt-artifacts.mdx
@@ -72,3 +72,8 @@ Each time the model is executed, the data is replaced with data from the project
 Data about all the snapshots in the project and project packages.
 Each row contains information about the properties of a single snapshot, including columns like tags, owner, depends_on, and description.
 Each time the model is executed, the data is replaced with data from the project's current graph.
+
+### dbt_columns
+
+Data about all the columns that are documented in the yml files. Each row contains information about the properties of a single column, including data type and description.
+Each time the model is executed, the data is replaced with data from the project's current graph.
