--- a/docs/data-tests/anomaly-detection-configuration/anomaly-params.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/anomaly-params.mdx
@@ -20,7 +20,7 @@ sidebarTitle: "All configuration params"
    -- <a href="/data-tests/anomaly-detection-configuration/ignore_small_changes"><font color="#CD7D55">ignore_small_changes:</font></a>
         &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/ignore_small_changes"><font color="#CD7D55">spike_failure_percent_threshold: int</font></a>
         &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/ignore_small_changes"><font color="#CD7D55">drop_failure_percent_threshold: int</font></a>
-   -- <a href="/data-tests/anomaly-detection-configuration/anomaly_exclude_metrics"><font color="#CD7D55">anomaly_exclude_metrics: [where expression filtering metric_date / metric_time_bucket / metric_value]</font></a>
+   -- <a href="/data-tests/anomaly-detection-configuration/anomaly-exclude-metrics"><font color="#CD7D55">anomaly_exclude_metrics: [SQL expression]</font></a>
 
   Anomaly detection tests with timestamp_column:
    -- <a href="/data-tests/anomaly-detection-configuration/days-back"><font color="#CD7D55">days_back: int</font></a>
