docs: Add Athena!

--- a/docs/data-tests/schema-tests/json-schema.mdx
+++ b/docs/data-tests/schema-tests/json-schema.mdx
@@ -9,8 +9,8 @@ defined according to the [JSON schema standard](https://json-schema.org/), defin
 
 This test along with the relevant JSON schema can be auto-generated (see details below).
 
-_Note: This test relies on our [Python tests capability](/data-tests/python-tests), and is currently only supported for
-Snowflake and BigQuery data warehouses._
+_Note_: This test relies on our [Python tests capability](/data-tests/python-tests), and is currently only supported for
+Snowflake and BigQuery data warehouses.
 
 ### Auto-generate JSON schema tests
 
