--- a/docs/features/config-as-code.mdx
+++ b/docs/features/config-as-code.mdx
@@ -3,4 +3,13 @@ title: "Configuration as Code"
 icon: "code"
 ---
 
-Under construction 🚧
+When using test config-as-code, the configuration becomes a part of the development process that includes version control, continuous integration, and a review process. With Elementary, you can open pull requests to your dbt project by integrating it with the project code repository.
+
+You can save time by adding tests in bulk, such as schema changes, volume, and freshness anomalies to all your source or staging models. Additionally, you can allow data analysts to create quality tests without writing any code. Elementary will take care of it for them and open the pull request.
+
+<Frame>
+  <img
+    src="https://res.cloudinary.com/diuctyblm/image/upload/v1701765632/elementary_configuration_as_code_pdonse.gif"
+    alt="Elementary test configuration as code"
+  />
+</Frame>
