--- a/docs/oss/guides/generate-report-ui.mdx
+++ b/docs/oss/guides/generate-report-ui.mdx
@@ -57,7 +57,7 @@ There are 3 ways to filter the report by invocation:
 
 - **Last invocation** - Filter by the last invocation (`dbt test` / `dbt build`) that ran.
 - **Invocation time** - Filter by the closest invocation (`dbt test` / `dbt build`) to the provided time (the provided time should be in ISO format local time).
-- **Invocation id** - Filter by the provided invoation (`dbt test` / `dbt build`) id.
+- **Invocation id** - Filter by the provided invocation (`dbt test` / `dbt build`) id.
 
 Filters usage example:
 
