--- a/docs/_snippets/data-tests/tests-cards.mdx
+++ b/docs/_snippets/data-tests/tests-cards.mdx
@@ -5,14 +5,21 @@
     icontype="solid"
     href="/data-tests/introduction#anomaly-detection-tests"
   >
-    - Volume - Freshness - Event freshness - Column anomalies - Dimensions
+    - Volume 
+    - Freshness 
+    - Event freshness 
+    - Column anomalies 
+    - Dimensions
   </Card>
   <Card
     title="Schema tests"
     icon="table"
     href="/data-tests/introduction#schema-tests"
   >
-    - Schema changes - Baseline schema - JSON schema - Exposure schema
+    - Schema changes 
+    - Baseline schema 
+    - JSON schema 
+    - Exposure schema
   </Card>
   <Card
     title="Other tests"
