readd missing changed to docs

--- a/docs/data-tests/add-elementary-tests.mdx
+++ b/docs/data-tests/add-elementary-tests.mdx
@@ -237,8 +237,8 @@ If you wish to only be warned on anomalies, configure the `severity` of the test
 ## What happens on each test?
 
 Upon running a test, your data is split into time buckets based on the [`time_bucket`](/data-tests/anomaly-detection-configuration/time-bucket) field and is limited by
-the [`days_back`](/data-tests/anomaly-detection-configuration/days-back) var. The test then compares a certain metric (e.g. row count) of the buckets that are within the detection
-period ([`backfill_days`](/data-tests/anomaly-detection-configuration/backfill-days)) to the row count of all the previous time buckets within the [`days_back`](/data-tests/anomaly-detection-configuration/days-back) period.
+the [`training_period`](/data-tests/anomaly-detection-configuration/training-period) var. The test then compares a certain metric (e.g. row count) of the buckets that are within the
+[`detection-period`](/data-tests/anomaly-detection-configuration/detection-period) to the row count of all the previous time buckets within the [`training_period`](/data-tests/anomaly-detection-configuration/training-period) period.
 If there were any anomalies in the detection period, the test will fail.
 On each test elementary package executes the relevant monitors, and searches for anomalies by comparing to historical metrics.
 
