--- a/docs/data-tests/anomaly-detection-configuration/time-bucket.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/time-bucket.mdx
@@ -60,5 +60,5 @@ vars:
 
 #### How it works?
 
-- The `days_back` and `backfill_days` of the test might be extended to ensure full time buckets (for example, full week Sunday-Saturday).
+- The `training_period` and `detection_period` of the test might be extended to ensure full time buckets (for example, full week Sunday-Saturday).
 - Weekly buckets start at the day that is configured as week start on the data warehouse.
