--- a/docs/data-tests/anomaly-detection-configuration/timestamp-column.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/timestamp-column.mdx
@@ -17,7 +17,7 @@ The best column for this would be an `updated_at`/`created_at`/`loaded_at` times
 - When you specify a `timestamp_column`, when the test runs it splits the data to buckets according to the timestamp in this column, calculates the metric for each bucket and checks for anomalies between these buckets.
   This also means that if the table has enough historical data, the test can start working right away.
 - When you do not specify a `timestamp_column`, each time the test runs it calculates the metric for all of the data in the table, and checks for anomalies between the metric from previous runs.
-  This also means that it will take the test `days_back` days to start working, as it needs to the time to collect the necessary metrics.
+  This also means that it will take the test `training_period` days to start working, as it needs to the time to collect the necessary metrics.
 
 If undefined, default is null (no time buckets).
 
