--- a/docs/data-tests/how-anomaly-detection-works.mdx
+++ b/docs/data-tests/how-anomaly-detection-works.mdx
@@ -9,8 +9,8 @@ This is done to detect [significant changes and deviations](/data-tests/data-ano
 ## What happens on each test?
 
 Upon running a test, your data is split into time buckets based on the [`time_bucket`](/data-tests/anomaly-detection-configuration/time-bucket) field and is limited by
-the [`days_back`](/data-tests/anomaly-detection-configuration/days-back) var. The test then compares a certain metric (e.g. row count) of the buckets that are within the detection
-period ([`backfill_days`](/data-tests/anomaly-detection-configuration/backfill-days)) to the row count of all the previous time buckets within the [`days_back`](/data-tests/anomaly-detection-configuration/days-back) period.
+the [`training_period`](/data-tests/anomaly-detection-configuration/training-period) var. The test then compares a certain metric (e.g. row count) of the buckets that are within the detection
+period ([`detection_period`](/data-tests/anomaly-detection-configuration/detection-period)) to the row count of all the previous time buckets within the [`training_period`](/data-tests/anomaly-detection-configuration/training-period) period.
 If there were any anomalies in the detection period, the test will fail.
 On each test elementary package executes the relevant monitors, and searches for anomalies by comparing to historical metrics.
 
@@ -93,11 +93,11 @@ Configuration params related directly to the test's core concepts:
 
 **Detection period and detection set**
 
-- [backfill_days](/data-tests/anomaly-detection-configuration/backfill-days)
+- [detection_period](/data-tests/anomaly-detection-configuration/detection-period)
 
 **Training period and training set**
 
-- [days_back](/data-tests/anomaly-detection-configuration/days-back)
+- [training_period](/data-tests/anomaly-detection-configuration/training-period)
 - [seasonality](/data-tests/anomaly-detection-configuration/seasonality)
 
 **Time buckets**
