--- a/docs/data-tests/anomaly-detection-configuration/anomaly-params.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/anomaly-params.mdx
@@ -21,14 +21,11 @@ sidebarTitle: "All configuration params"
     <a href="/data-tests/anomaly-detection-configuration/anomaly-sensitivity">
       <font color="#CD7D55">anomaly_sensitivity: int</font>
     </a>
-    -- <a href="/data-tests/anomaly-detection-configuration/min-training-set-size">
-      <font color="#CD7D55">min_training_set_size: int</font>
-    </a>
-    --{" "}
-    <a href="/data-tests/anomaly-detection-configuration/anomaly-direction">
+    -- <a href="/data-tests/anomaly-detection-configuration/anomaly-direction">
       <font color="#CD7D55">anomaly_direction: [both | spike | drop]</font>
     </a>
-    -- <a href="/data-tests/anomaly-detection-configuration/ignore_small_changes">
+    --{" "}
+    <a href="/data-tests/anomaly-detection-configuration/ignore_small_changes">
       <font color="#CD7D55">ignore_small_changes:</font>
     </a>
     &nbsp;&nbsp;&nbsp;&nbsp;
@@ -39,15 +36,14 @@ sidebarTitle: "All configuration params"
     <a href="/data-tests/anomaly-detection-configuration/ignore_small_changes">
       <font color="#CD7D55">drop_failure_percent_threshold: int</font>
     </a>
-    Anomaly detection tests with timestamp_column: --{" "}
-    <a href="/data-tests/anomaly-detection-configuration/days-back">
-      <font color="#CD7D55">days_back: int</font>
-    </a>
-    -- <a href="/data-tests/anomaly-detection-configuration/backfill-days">
-      <font color="#CD7D55">backfill_days: int</font>
+    Anomaly detection tests with timestamp_column: -- <a href="/data-tests/anomaly-detection-configuration/training-period">
+      <font color="#CD7D55">training_period: int</font>
     </a>
     --{" "}
-    <a href="/data-tests/anomaly-detection-configuration/time-bucket">
+    <a href="/data-tests/anomaly-detection-configuration/detection-period">
+      <font color="#CD7D55">detection_period: int</font>
+    </a>
+    -- <a href="/data-tests/anomaly-detection-configuration/time-bucket">
       <font color="#CD7D55">time_bucket:</font>
     </a>
     &nbsp;&nbsp;&nbsp;&nbsp;
@@ -58,14 +54,15 @@ sidebarTitle: "All configuration params"
     <a href="/data-tests/anomaly-detection-configuration/time-bucket">
       <font color="#CD7D55">count: int</font>
     </a>
-    -- <a href="/data-tests/anomaly-detection-configuration/seasonality">
+    --{" "}
+    <a href="/data-tests/anomaly-detection-configuration/seasonality">
       <font color="#CD7D55">seasonality: day_of_week</font>
     </a>
-    --{" "}
-    <a href="/data-tests/anomaly-detection-configuration/detection-delay">
+    -- <a href="/data-tests/anomaly-detection-configuration/detection-delay">
       <font color="#CD7D55">detection_delay:</font>
     </a>
-    &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/detection-delay">
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <a href="/data-tests/anomaly-detection-configuration/detection-delay">
       <font color="#CD7D55">period: [hour | day | week | month]</font>
     </a>
     &nbsp;&nbsp;&nbsp;&nbsp;
