--- a/docs/cloud/guides/enable-slack-alerts.mdx
+++ b/docs/cloud/guides/enable-slack-alerts.mdx
@@ -35,14 +35,11 @@ title: "Enable Slack alerts"
 
     Here is the Elementary icon for your use (click to download):
 
-    <a
-      href="https://res.cloudinary.com/diuctyblm/image/upload/v1690367713/elementary_alert_dzibc7.png"
-      download
-    >
+    <a href="/pics/elementary_app.png" download="elementary_app.png">
       <img
         src="https://res.cloudinary.com/diuctyblm/image/upload/v1690367713/elementary_alert_dzibc7.png"
-        alt="Elementary logo"
         width="200"
+        noZoom
       />
     </a>
 
