--- a/docs/_snippets/setup-slack-integration.mdx
+++ b/docs/_snippets/setup-slack-integration.mdx
@@ -23,16 +23,13 @@ To change the display of the Elementary slack app, scroll down on the Slack app 
 
 Here is the Elementary icon for your use (click to download):
 
-<a
-  href="https://res.cloudinary.com/diuctyblm/image/upload/v1690367713/elementary_alert_dzibc7.png"
-  download
->
-  <img
-    src="https://res.cloudinary.com/diuctyblm/image/upload/v1690367713/elementary_alert_dzibc7.png"
-    alt="Elementary logo"
-    width="200"
-  />
-</a>
+  <a href="/pics/elementary_app.png" download="elementary_app.png">
+    <img
+      src="https://res.cloudinary.com/diuctyblm/image/upload/v1690367713/elementary_alert_dzibc7.png"
+      width="200"
+      noZoom
+    />
+  </a>
 
 </Accordion>
 
