--- a/docs/cloud/guides/enable-slack-alerts.mdx
+++ b/docs/cloud/guides/enable-slack-alerts.mdx
@@ -35,9 +35,9 @@ title: "Enable Slack alerts"
 
     Here is the Elementary icon for your use (click to download):
 
-    <a href="/pics/elementary_app.png" download="elementary_app.png">
+    <a href="/pics/elementary_app.png" download>
       <img
-        src="https://res.cloudinary.com/diuctyblm/image/upload/v1690367713/elementary_alert_dzibc7.png"
+        src="/pics/elementary_app.png"
         width="200"
         noZoom
       />
