--- a/docs/data-tests/anomaly-detection-configuration/anomaly-params.mdx
+++ b/docs/data-tests/anomaly-detection-configuration/anomaly-params.mdx
@@ -22,10 +22,10 @@ sidebarTitle: "All configuration params"
    -- <a href="/data-tests/anomaly-detection-configuration/anomaly-exclude-metrics"><font color="#CD7D55">anomaly_exclude_metrics: [SQL expression]</font></a>
 
   Anomaly detection tests with timestamp_column:
-   -- <a href="/data-tests/anomaly-detection-configuration/training-period"><font color="#CD7D55">training-period: int</font></a>
+   -- <a href="/data-tests/anomaly-detection-configuration/training-period"><font color="#CD7D55">training_period: int</font></a>
         &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/training-period"><font color="#CD7D55">period: [hour | day | week | month]</font></a>
         &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/training-period"><font color="#CD7D55">count: int</font></a>
-   -- <a href="/data-tests/anomaly-detection-configuration/detection-period"><font color="#CD7D55">detection-period: int</font></a>
+   -- <a href="/data-tests/anomaly-detection-configuration/detection-period"><font color="#CD7D55">detection_period: int</font></a>
         &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/detection-period"><font color="#CD7D55">period: [hour | day | week | month]</font></a>
         &nbsp;&nbsp;&nbsp;&nbsp;<a href="/data-tests/anomaly-detection-configuration/detection-period"><font color="#CD7D55">count: int</font></a>
    -- <a href="/data-tests/anomaly-detection-configuration/time-bucket"><font color="#CD7D55">time_bucket:</font></a>
